fix padding and alignment

--- a/salmonriveradventures/css/large.css
+++ b/salmonriveradventures/css/large.css
@@ -79,7 +79,7 @@
 
     #weatherbox {
         font-size: 1.5vw;
-        padding-top: 15px;
+        padding-top: 50px;
         padding-left: 50px;
     }
 
